<resources>
    <string name="app_name">FSalon</string>
    <string name="action_create">Create Account</string>
    <string name="action_login">Login</string>
    <string name="hint_name">Name</string>
    <string name="hint_birth">Date of Birth</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_re_password">Re-enter Password</string>
    <string name="msg_member">Already a member?</string>
    <string name="tile_fsalon">FSalon</string>
    <string name="title_remember_me">Remember Me</string>
    <string name="title_login">Login</string>
    <string name="action_forgot_password">Forgot password</string>
    <string name="title_phone">Phone</string>
    <string name="title_phone_or_email">Phone or Email</string>
    <string name="title_pass_word">Pass Word</string>
    <string name="title_slash">\t/\t</string>
    <string name="title_name">Name</string>
    <string name="title_stylist">Stylist</string>
    <string name="title_salon">Salon</string>
    <string name="title_appointment">Appointment</string>
    <string name="title_register">Register</string>
    <string name="msg_error_empty">Text Must not Empty!</string>
    <string name="msg_login_success">Login Success</string>
    <string name="title_info">Info</string>
    <string name="title_book">Book</string>
    <string name="title_date">Date</string>
    <string name="title_time">Time</string>
    <string name="action_close">Close</string>
    <string name="title_dash">-</string>
    <string name="title_today">Today</string>
    <string name="title_tomorrow">Tomorrow</string>
    <string name="title_after_tomorrow">After Tomorrow</string>
    <string name="title_history">History</string>
    <string name="title_detail">Detail</string>
    <string name="title_scheduler">Scheduler</string>
    <string name="title_customer">Customer</string>
    <string name="title_receipt">Bill</string>
    <string name="title_report">Report</string>
    <string name="title_profile">Profile</string>
    <string name="msg_book_success">Book Success</string>
    <string name="msg_pls_select_time">Please Select The Time Below</string>
    <string name="msg_pls_select_salon">Please Select The Salon Below</string>
    <string name="top_sheet_behavior" translatable="false">com.framgia.fsalon.wiget.TopSheetBehavior</string>
    <string name="action_pick_date">Pick date</string>
    <string name="title_success">Booking Success</string>
    <string name="title_congrat">Congratulations</string>
    <string name="msg_success_booking">You have successfully booked with these informations</string>
    <string name="action_ok">OK</string>
</resources>
