<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_scheduler"
        android:icon="@drawable/ic_calendar"
        android:title="@string/title_scheduler"/>
    <item
        android:id="@+id/item_receipt"
        android:icon="@drawable/ic_receipt"
        android:title="@string/title_receipt"/>
    <item
        android:id="@+id/item_report"
        android:icon="@drawable/ic_report"
        android:title="@string/title_report"/>
    <item
        android:id="@+id/item_customer"
        android:icon="@drawable/ic_customer"
        android:title="@string/title_customer"/>
    <item
        android:id="@+id/item_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile"/>
</menu>