<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_book"
        android:icon="@drawable/ic_scissors_comb_40dp"
        android:title="@string/title_book"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_detail"
        android:icon="@drawable/ic_detail"
        android:title="@string/title_detail"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_history"
        android:icon="@drawable/ic_history"
        android:title="@string/title_history"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_user"
        android:icon="@drawable/ic_user"
        android:title="@string/title_info"
        app:showAsAction="ifRoom"/>

</menu>