<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <data>

        <variable
            name="viewModel"
            type="com.framgia.fsalon.screen.register.RegisterViewModel"
            />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_24"
            android:paddingRight="@dimen/dp_24"
            android:paddingTop="@dimen/dp_48">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:inputType="textPersonName"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_weight="1">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="@string/hint_birth"/>
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:layout_width="@dimen/dp_36"
                    android:layout_height="@dimen/dp_36"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_calendar"/>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_mobile"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_re_password"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_24"
                android:background="@color/color_pink_accent_200"
                android:padding="@dimen/dp_12"
                android:text="@string/action_create"
                android:textColor="@android:color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_24"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="@string/msg_member"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_16"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/dp_12"
                    android:text="@string/action_login"
                    android:textColor="@color/color_pink_accent_200"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="italic"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>
