<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="viewModel"
            type="com.framgia.fsalon.screen.login.LoginViewModel"
            />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        tools:context="com.framgia.fsalon.screen.login.LoginActivity"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_30"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_10"
                android:text="@string/tile_fsalon"
                android:textColor="@color/color_black"
                android:textSize="@dimen/sp_60"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30"
                android:background="@drawable/ic_scissors_comb_40dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/dp_20"
            android:orientation="vertical"
            android:paddingTop="@dimen/dp_10"
            android:weightSum="1"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:transitionName="@string/title_phone"
                >

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_phone"
                    android:paddingLeft="@dimen/dp_10"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:transitionName="@string/title_pass_word"
                >

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_pass_word"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/dp_10"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:buttonTint="@color/color_black"
                android:text="@string/title_remember_me"
                android:textColor="@color/color_black"
                android:textSize="@dimen/sp_15"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/bg_gradient"
                android:fontFamily="serif"
                android:gravity="center"
                android:padding="@dimen/dp_12"
                android:text="@string/title_login"
                android:textAllCaps="true"
                android:textColor="@color/color_white"
                android:textStyle="bold"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingTop="@dimen/dp_20">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:paddingTop="@dimen/dp_5"
                    android:text="Register"
                    android:textAllCaps="false"
                    android:textColor="@color/color_black"
                    android:textStyle="italic|bold"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:paddingTop="@dimen/dp_5"
                    android:text="@string/title_slash"
                    android:textAllCaps="false"
                    android:textColor="@color/color_black"
                    android:textStyle="italic|bold"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:paddingTop="@dimen/dp_5"
                    android:text="@string/action_forgot_password"
                    android:textAllCaps="false"
                    android:textColor="@color/color_black"
                    android:textStyle="italic|bold"
                    />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>
