<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="viewModel"
            type="com.framgia.fsalon.screen.detail.DetailViewModel"
            />

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="thminh.fsalontest.ScrollingActivity">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nested_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_24"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp_12"
                android:paddingRight="@dimen/dp_12">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_24"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_user"
                        android:tint="@android:color/holo_orange_light"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_12"
                        android:background="@drawable/bg_details"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/dp_5">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dp_5"
                            android:text="@string/title_name"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/sp_15"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/dp_8"
                            android:gravity="right"
                            android:textColor="@color/color_black"
                            android:textSize="@dimen/sp_18"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_24"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_user"
                        android:tint="@color/colorAccent"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_12"
                        android:background="@drawable/bg_details"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/dp_5">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dp_5"
                            android:text="@string/title_phone"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/sp_15"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/dp_8"
                            android:gravity="right"
                            android:textColor="@color/color_black"
                            android:textSize="@dimen/sp_18"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_24"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_user"
                        android:tint="@android:color/holo_red_light"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_12"
                        android:background="@drawable/bg_details"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/dp_5">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dp_5"
                            android:text="@string/title_appointment"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/sp_15"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/dp_8"
                            android:gravity="right"
                            android:textColor="@color/color_black"
                            android:textSize="@dimen/sp_18"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_24"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_user"
                        android:tint="@android:color/holo_green_light"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_12"
                        android:background="@drawable/bg_details"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/dp_5">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dp_5"
                            android:text="@string/title_salon"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/sp_15"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/dp_8"
                            android:gravity="right"
                            android:textColor="@color/color_black"
                            android:textSize="@dimen/sp_18"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_24"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_hairdresser"
                        android:tint="@android:color/darker_gray"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_12"
                        android:background="@drawable/bg_details"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/dp_5">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dp_5"
                            android:text="@string/title_stylist"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/sp_15"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/dp_8"
                            android:gravity="right"
                            android:textColor="@color/color_black"
                            android:textSize="@dimen/sp_18"/>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:fabSize="normal"
            app:layout_anchor="@id/nested_detail"
            app:layout_anchorGravity="bottom|end"
            app:srcCompat="@android:drawable/ic_menu_edit"/>

    </android.support.design.widget.CoordinatorLayout>
</layout>
